--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "format": "prettier --write src/**/*.tsx --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -28,6 +32,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^11.1.9",
     "next": "13.4.19",
     "pdfjs-dist": "3.4.120",
     "postcss": "8.4.31",
