--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
-    "react-secure-storage": "^1.3.0",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zustand": "^4.5.2"
   }
 }
