--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@react-pdf-viewer/core": "3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
     "@stripe/react-stripe-js": "^2.4.0",
